- Added SteamGifts link to group pages
- Fixed web chat link
- Fixed profile icon links not respecting color/grayscale setting

General
- Added translation percentages view to Options
- Added option to replace "Install Steam" button with "Open in Client" button, and removed "View in client" link from app pages, since it is now obsolete
- Some bugfixes in options


v1.2.1
-----
- Hotfix after latest Steam changes

v1.2.0
-----
- Complete rework of Options page. Feels so fresh now.
- Added option to open external links in new tab
- Improved YouTube search query
- Added option to show applicable coupon on app pages and improved inventory handling
- Updated localizations

Fixes
- Fixed highlighting on front page after summer sale
- Fixed "Add selected DLC to cart" button
- Fixed profile theme not being applied to every showcase
- Fixed achievement sorting not working in other languages than English
- Fixed "Install Steam" button not being properly handled (which was breaking other things)
- Fixed achievement bars sometimes using different styles
- Fixed price data overlay info staying visible on wishlist after game was removed
- Fixed account name on being replaced on purchase history page



v1.1.1
-----
- Added highlighting support for Summer Sale 2019
- Fixed Quick/Instant sell in Firefox
- Other minor fixes and localization updates


v1.1.0
-----
- Added YouTube videos and reviews to app pages
- Fixed quick and instant sell
- Fixed first/last page button in inventory
- Fixed WSGF info
- Fixed wishlist count for large wishlists


v1.0.0
-----
First major Augemented Steam release!

- Improved Steam search filters
- Improved the way SteamRep is shown
- Market stats should be more reliable
- Added one year filter for market history
- Fixed highlights on publishers and developers pages
- Fixed game title highlights, highlighting all variations, not just owned games
- Fixed duplicates during friends sorting