@@ -38,4 +38,9 @@
     <li>Some bugfixes in options</li>
 </ul>
 
+<h2>Known issues</h2>
+<ul>
+    <li>Tag excluding filter is broken, due to Steam serverside change</li>
+</ul>
+
 <p>For more information, check out <a href="https://steamaugmented.com/">our website</a> or <a href="https://discord.gg/yn57q7f">discord channel</a></p>
