@@ -31,6 +31,9 @@ General
 - Added option to replace "Install Steam" button with "Open in Client" button, and removed "View in client" link from app pages, since it is now obsolete
 - Some bugfixes in options
 
+Known issues
+- Tag excluding filter is broken, due to Steam serverside change
+
 
 v1.2.1
 -----
